# Terrain-Navigate

./: .gitignore  LICENSE  README.md  pyproject.toml
Robotics_Path_Finder/: download_area.ipynb  net_files_and_storage.py
Robotics_Path_Finder/k/: A_star_v1.ipynb  A_star_v3.ipynb  download_area.py
Robotics_Path_Finder/src/pathfinder/: __init__.py
Robotics_Path_Finder/tests/: test_refactoring.py
docs/: final_presentation.aux  final_presentation.nav  final_presentation.out  final_presentation.tex  final_presentation.toc  final_presentation.vrb  module_plan.fdb_latexmk  module_plan.fls  module_plan.tex  repository_update.fdb_latexmk  repository_update.fls  repository_update.tex  technical_design.aux  technical_design.fdb_latexmk  technical_design.fls  technical_design.tex  technology_stack.tex
docs/week1_design/: technical_design.tex  technology_stack.tex
examples/: A_star_v1.ipynb  A_star_v2.ipynb  A_star_v3.ipynb  README.md  download_data.py  download_mdrs_data.py  map.ipynb  mdrs_pathfinding.ipynb  preprocess_data.py
examples/MDRS/: A_star_v2.ipynb  README.md  download_data.py  preprocess_data.py
examples/legacy/: A_star_v2.ipynb  create_modular_notebook.py
examples/mdrs/: 01_download_data.py  02_process_data.py  03_pathfinding_demo.ipynb  README.md
examples/synthetic/: README.md  cost_demo.ipynb  tutorial.ipynb
src/pathfinder/: __init__.py  algorithms.py  base.py  config.py
src/terrain_navigate/: __init__.py  __main__.py  algorithms.py  base.py  costs.py  environments.py  loader.py  utils.py
tests/: test_modular_pathfinder.py  test_pathfinder.py
(+3035 files in other folders)
