[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terrain-navigate"
version = "0.1.0"
description = "A modular Python library for 3D pathfinding on terrain maps."
authors = [
  { name="Tavish", email="tavish@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/tavish/Terrain-Navigate"
